Testing the Versioning Control Process

--- a/force-app/main/default/classes/CreateOppty.cls
+++ b/force-app/main/default/classes/CreateOppty.cls
@@ -7,7 +7,7 @@ public class CreateOppty {
         Date d = Date.today().addMonths(1);
         Opportunity newOpp = new Opportunity(Name=oppName, 
                                              AccountId=caseRecord.AccountId, 
-                                             StageName='Perception Analysis', 
+                                             StageName='Perception Analysis TEST THE SUREKHA CHANGES', 
                                              CloseDate=d);
         
         insert newOpp;
